force-app/main/default/objects/Placement__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active checkbox  is used in Placement for Distressed</description>
    <inlineHelpText>Active checkbox  is used in Placement for Distressed</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>