force-app/main/default/objects/Placement__c/fields/Agency_Address__c.field-meta.xml
<CustomField>
    <fullName>Agency_Address__c</fullName>
    <formula>Agency_Street1__c + IF( ISBLANK(Agency_Street2__c) , &apos;&apos;, &apos;,&apos; + Agency_Street2__c ) + 
IF( ISBLANK( Agency_City__c ) , &apos;&apos;, &apos;, &apos;+Agency_City__c) 
+ IF( ISBLANK( Agency_State__c ) , &apos;&apos;, &apos;, &apos;+Agency_State__c) 
+ IF( ISBLANK( Agency_Zip_Code__c ) , &apos;&apos;, &apos;, &apos;+Agency_Zip_Code__c)
+ IF( ISBLANK( Secondary_Street1__c) , &apos;&apos;, &apos;&lt;br/&gt;&apos;+Secondary_Street1__c) 
+ IF( ISBLANK( Secondary_City__c) , &apos;&apos;, &apos;, &apos;+Secondary_City__c) 
+ IF( ISBLANK( Secondary_Province__c) , &apos;&apos;, &apos;,&apos;+Secondary_Province__c) 
+ IF( ISBLANK( Secondary_Postal_Code__c	) , &apos;&apos;, &apos;, &apos;+Secondary_Postal_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Address</label>
    <type>Text</type>
</CustomField>