force-app/main/default/objects/Placement__c/fields/Agency_City__c.field-meta.xml
<CustomField>
    <fullName>Agency_City__c</fullName>
    <description>Agency City</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency City</inlineHelpText>
    <label>Agency City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>