force-app/main/default/objects/Placement__c/fields/Agency_Email__c.field-meta.xml
<CustomField>
    <fullName>Agency_Email__c</fullName>
    <description>Agency Email</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Email</inlineHelpText>
    <label>Agency Email</label>
    <type>Email</type>
</CustomField>