force-app/main/default/objects/Placement__c/fields/Agency_Fax__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fax__c</fullName>
    <description>Agency Fax</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Fax</inlineHelpText>
    <label>Agency Fax</label>
    <type>Phone</type>
</CustomField>