force-app/main/default/objects/Placement__c/fields/Agency_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Agency_Logo_URL__c</fullName>
    <description>Agency Logo URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Logo URL</inlineHelpText>
    <label>Agency Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>