force-app/main/default/objects/Placement__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <description>Agency Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Name</inlineHelpText>
    <label>Agency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>