force-app/main/default/objects/Placement__c/fields/Agency_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_Phone_Number__c</fullName>
    <description>Agency Phone Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Phone Number
This field is used for Distressed Accounts Only</inlineHelpText>
    <label>Agency Toll Free Number</label>
    <type>Phone</type>
</CustomField>