force-app/main/default/objects/Placement__c/fields/Agency_State__c.field-meta.xml
<CustomField>
    <fullName>Agency_State__c</fullName>
    <description>Agency State-&gt;Agency Province</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency State
This field is used for Distressed Accounts Only</inlineHelpText>
    <label>Agency State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>