force-app/main/default/objects/Placement__c/fields/Agency_Street1__c.field-meta.xml
<CustomField>
    <fullName>Agency_Street1__c</fullName>
    <description>Agency Street1</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Street1</inlineHelpText>
    <label>Agency Street1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>