force-app/main/default/objects/Placement__c/fields/Agency_Street2__c.field-meta.xml
<CustomField>
    <fullName>Agency_Street2__c</fullName>
    <description>Agency Street2</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Street2</inlineHelpText>
    <label>Agency Street2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>