force-app/main/default/objects/Placement__c/fields/Agency_Telephone_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Agency_Telephone_Number_1__c</fullName>
    <description>Agency Telephone Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Telephone Number
This field is used for Distressed Accounts Only</inlineHelpText>
    <label>Agency Telephone Number 1</label>
    <type>Phone</type>
</CustomField>