force-app/main/default/objects/Placement__c/fields/Agency_Telephone_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Agency_Telephone_Number_2__c</fullName>
    <description>Agency Telephone Number 2</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Telephone Number 2
This field is used for Distressed Accounts Only</inlineHelpText>
    <label>Agency Telephone Number 2</label>
    <type>Phone</type>
</CustomField>