force-app/main/default/objects/Placement__c/fields/Agency_Telephone_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Agency_Telephone_Type_1__c</fullName>
    <description>Agency Telephone Type 1</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Telephone  Type 1
This field is used for Distressed Accounts Only</inlineHelpText>
    <label>Agency Telephone Type 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>