force-app/main/default/objects/Placement__c/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <description>This field is used for Distressed Accounts Only</description>
    <inlineHelpText>This field is used for Distressed Accounts Only</inlineHelpText>
    <label>Agency Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Collection Agency</fullName>
            </value>
            <value>
                <fullName>Law Office</fullName>
            </value>
            <value>
                <fullName>Probate</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Distressed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>