force-app/main/default/objects/Placement__c/fields/Agency_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Zip_Code__c</fullName>
    <description>Agency Zip Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Zip Code
This field is used for Distressed Accounts Only</inlineHelpText>
    <label>Agency Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>