force-app/main/default/objects/Placement__c/fields/Apply_Ontario_Rate_on_Legal_Account__c.field-meta.xml
<CustomField>
    <fullName>Apply_Ontario_Rate_on_Legal_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Ontario Rate on Legal Account</label>
    <type>Checkbox</type>
</CustomField>