force-app/main/default/objects/Placement__c/fields/Client_Services_Details__c.field-meta.xml
<CustomField>
    <fullName>Client_Services_Details__c</fullName>
    <description>Field to add extra details about Agency eg Phone no, address</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field to add extra details about Agency</inlineHelpText>
    <label>Client Services Details</label>
    <type>TextArea</type>
</CustomField>