force-app/main/default/objects/Placement__c/fields/Commission_Rate_Mode__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate_Mode__c</fullName>
    <label>Commission Rate Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commission Rate Only</fullName>
                <default>true</default>
                <label>Commission Rate Only</label>
            </value>
            <value>
                <fullName>Commission Rate and Disbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>