force-app/main/default/objects/Placement__c/fields/Default_Tolerance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Default_Tolerance_Amount__c</fullName>
    <description>Default Tolerance Amount ($)</description>
    <inlineHelpText>Default Tolerance Amount ($)</inlineHelpText>
    <label>Default Tolerance Amount ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>