force-app/main/default/objects/Placement__c/fields/Default_Tolerance_of_Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>Default_Tolerance_of_Total_Balance__c</fullName>
    <description>Default Tolerance % of Total Balance</description>
    <inlineHelpText>Default Tolerance % of Total Balance</inlineHelpText>
    <label>Default Tolerance % of Total Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>