force-app/main/default/objects/Placement__c/fields/HST_GST_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>HST_GST_Registration_Number__c</fullName>
    <description>HST/GST Registration Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>HST/GST Registration Number</inlineHelpText>
    <label>HST/GST Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>