force-app/main/default/objects/Placement__c/fields/Include_In_Portal_Search__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Portal_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include In Portal Search</description>
    <inlineHelpText>Include In Portal Search</inlineHelpText>
    <label>Include In Portal Search</label>
    <type>Checkbox</type>
</CustomField>