force-app/main/default/objects/Placement__c/fields/Judgment_Program__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Program__c</fullName>
    <description>Judgment Program s used in Placement for Distressed</description>
    <inlineHelpText>Judgment Program s used in Placement for Distressed</inlineHelpText>
    <label>Judgment Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commission Increase</fullName>
            </value>
            <value>
                <fullName>Disbursements</fullName>
            </value>
            <value>
                <fullName>Re-imbursed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>