force-app/main/default/objects/Placement__c/fields/Judgment_Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Program_Start_Date__c</fullName>
    <description>Judgment Program Start Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Judgment Program Start Date</label>
    <type>Date</type>
</CustomField>