force-app/main/default/objects/Placement__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Placement Notes used in Placement for Distressed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Notes used in Placement for Distressed</inlineHelpText>
    <label>Notes</label>
    <length>99999</length>
    <type>LongTextArea</type>
</CustomField>