force-app/main/default/objects/Placement__c/fields/Record_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Record_Identifier__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Identifier</label>
    <type>Text</type>
</CustomField>