force-app/main/default/objects/Placement__c/fields/Secondary_City__c.field-meta.xml
<CustomField>
    <fullName>Secondary_City__c</fullName>
    <description>Secondary City</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Secondary City</inlineHelpText>
    <label>Secondary City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>