force-app/main/default/objects/Placement__c/fields/Secondary_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Postal_Code__c</fullName>
    <description>Secondary Postal Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Secondary Postal Code</inlineHelpText>
    <label>Secondary Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>