force-app/main/default/objects/Placement__c/fields/Secondary_Province__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Province__c</fullName>
    <description>Secondary Province</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Secondary Province</inlineHelpText>
    <label>Secondary Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>