force-app/main/default/objects/Placement__c/fields/Secondary_Street1__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Street1__c</fullName>
    <description>Secondary Street1</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Secondary Street1</inlineHelpText>
    <label>Secondary Street1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>