force-app/main/default/objects/Placement__c/fields/Serviceable_Province__c.field-meta.xml
<CustomField>
    <fullName>Serviceable_Province__c</fullName>
    <label>Serviceable Province</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alberta</fullName>
                <label>AB</label>
            </value>
            <value>
                <fullName>British Columbia</fullName>
                <label>BC</label>
            </value>
            <value>
                <fullName>Manitoba</fullName>
                <label>MB</label>
            </value>
            <value>
                <fullName>New Brunswick</fullName>
                <label>NB</label>
            </value>
            <value>
                <fullName>Newfoundland and Labrador</fullName>
                <label>NL</label>
            </value>
            <value>
                <fullName>Northwest Territories</fullName>
                <label>NT</label>
            </value>
            <value>
                <fullName>Nova Scotia</fullName>
                <label>NS</label>
            </value>
            <value>
                <fullName>Nunavut</fullName>
                <label>NU</label>
            </value>
            <value>
                <fullName>Prince Edward Island</fullName>
                <label>PE</label>
            </value>
            <value>
                <fullName>Ontario</fullName>
                <label>ON</label>
            </value>
            <value>
                <fullName>Quebec</fullName>
                <label>QC</label>
            </value>
            <value>
                <fullName>Saskatchewan</fullName>
                <label>SK</label>
            </value>
            <value>
                <fullName>Yukon</fullName>
                <label>YT</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>OO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>