force-app/main/default/objects/Placement__c/fields/Tolerance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tolerance_Amount__c</fullName>
    <description>Tolerance Amount ($)</description>
    <inlineHelpText>Tolerance Amount ($)</inlineHelpText>
    <label>Tolerance Amount ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>