force-app/main/default/objects/Placement__c/fields/Tolerance_of_Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>Tolerance_of_Total_Balance__c</fullName>
    <description>Tolerance % of Total Balance</description>
    <inlineHelpText>Tolerance % of Total Balance</inlineHelpText>
    <label>Tolerance % of Total Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>