force-app/main/default/objects/Placement__c/recordTypes/Collection_Agency.recordType-meta.xml
<RecordType>
    <fullName>Collection_Agency</fullName>
    <active>true</active>
    <description>This Record type used for Collection Agency</description>
    <label>Collection Agency</label>
</RecordType>