force-app/main/default/objects/Placement__c/recordTypes/Hybrid_Agency.recordType-meta.xml
<RecordType>
    <fullName>Hybrid_Agency</fullName>
    <active>true</active>
    <description>This Record type used for Hybrid Agency</description>
    <label>Hybrid Agency</label>
</RecordType>