force-app/main/default/objects/Placement__c/recordTypes/Legal_Agency.recordType-meta.xml
<RecordType>
    <fullName>Legal_Agency</fullName>
    <active>true</active>
    <description>This Record type used for Legal Agency</description>
    <label>Legal Agency</label>
</RecordType>