force-app/main/default/objects/Placement__c/validationRules/Prevent_duplicate_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_duplicate_record</fullName>
    <active>true</active>
    <description>Restrict user to create duplicate record</description>
    <errorConditionFormula>AND(
    ISNEW(),
    ISBLANK(Name) = false,
    NOT(ISBLANK(Name)),
    ISNEW(),
    OR(
        VLOOKUP($ObjectType.Placement__c.Fields.Name, $ObjectType.Placement__c.Fields.Name, Name) &lt;&gt; Id
    )
)</errorConditionFormula>
    <errorMessage>&quot;Duplicate Record&quot; A record with this name already exists</errorMessage>
</ValidationRule>