force-app/main/default/objects/Placement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agency_Name__c</columns>
    <columns>Agency_Phone_Number__c</columns>
    <columns>Agency_Email__c</columns>
    <columns>Agency_Address__c</columns>
    <columns>Agency_City__c</columns>
    <columns>Commission_Rate__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>