force-app/main/default/objects/Placement__c/listViews/All_Included_in_Portal_Search.listView-meta.xml
<ListView>
    <fullName>All_Included_in_Portal_Search</fullName>
    <columns>NAME</columns>
    <columns>Agency_Name__c</columns>
    <columns>Include_In_Portal_Search__c</columns>
    <columns>Commission_Rate_Mode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Include_In_Portal_Search__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All - Included in Portal Search</label>
    <sharedTo>
        <group>ICT_Group</group>
        <group>LRT_Group</group>
    </sharedTo>
</ListView>