force-app/main/default/objects/Placement__c/listViews/All_Not_Included_in_Portal_Search.listView-meta.xml
<ListView>
    <fullName>All_Not_Included_in_Portal_Search</fullName>
    <columns>NAME</columns>
    <columns>Agency_Name__c</columns>
    <columns>Include_In_Portal_Search__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Include_In_Portal_Search__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All - Not Included in Portal Search</label>
</ListView>