force-app/main/default/objects/Placement__c/listViews/All_without_Email.listView-meta.xml
<ListView>
    <fullName>All_without_Email</fullName>
    <columns>NAME</columns>
    <columns>Agency_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agency_Email__c</field>
        <operation>equals</operation>
    </filters>
    <label>All without Email</label>
</ListView>